--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.8.1",
     "astro": "^4.15.4",
+    "lightningcss": "^1.27.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6"
   }
 }
