--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.8.1",
-    "astro": "^4.15.4",
+    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^8.0.0-beta.2",
+    "astro": "^5.0.0-beta.1",
     "lightningcss": "^1.27.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
